tests/negative/handle_array.osc
// Negative test: handle type cannot be used as array element

fn! main() {
    let arr: [handle] = [];
}
